Move output to correct folder